FIX: removing li disc on small width browsers

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -69,6 +69,8 @@ figure.code figcaption,
   display: none;
 }
 
+ul.main-navigation { list-style-type: none; }
+
 #content { 
   border: none; 
   overflow: visible;
